Fixed alignment issue in intro, container now takes up 100% of width with container-fluid class

--- a/scss/sections/_intro.scss
+++ b/scss/sections/_intro.scss
@@ -3,10 +3,15 @@
 
     .intro-section {
         background-color: $robo-green;
-        img{
-            // box-shadow: 2px 2px 2px 2px black;
-            // box-shadow: 5px 5px 15px #363c2a,
-            //         -5px -5px 15px rgba(#fff, 0.2);
+        .row{
+            .intro{
+                img{
+                    // box-shadow: 2px 2px 2px 2px black;
+                    // box-shadow: 5px 5px 15px #363c2a,
+                    //         -5px -5px 15px rgba(#fff, 0.2);
+                }
+
+            }
         }
 
     }
